feat(infrastructure): 添加 JDK21 新特性演示代码
- 新增 Jdk21Demo 类，展示 JDK 21 新特性
- 更新 HashMapDemo 和 ListDemo，增加相关注释和示例代码
- 升级 Maven编译源到 JDK 21
- 更新 Base64 编码方式以适应 JDK 21
- 新增代理模式相关代码，包括 CglibProxy、JdkProxy、Person、Student 类